refactor(query-burst): get() -> getLast() 로 변경